# jaraco.office

./: CHANGES.rst  README.rst  build-exe.py  conftest.py  doc-to-pdf.py  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
docs/: index.rst
jaraco/: __init__.py
jaraco/office/: convert.py  excel.py  grep.py  test_main.py  word.py
src/jaraco/excel/: grep.py
