[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[project]
name = "jaraco.office"
authors = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "Utility library for working with MS Office documents"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Operating System :: Microsoft :: Windows",
]
keywords = ["excel office word"]
requires-python = ">=3.8"
dependencies = [
	"jaraco.path",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jaraco/jaraco.office"

[project.optional-dependencies]
testing = [
	# upstream
	"pytest >= 6, != 8.1.*",
	"pytest-checkdocs >= 2.4",
	"pytest-cov",
	"pytest-mypy",
	"pytest-enabler >= 2.2",
	"pytest-ruff >= 0.2.1",

	# local
	'pypiwin32; platform_system == "Windows"',
]
docs = [
	# upstream
	"sphinx >= 3.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# local
]

[project.scripts]
doc-to-pdf = "jaraco.office.word:doc_to_pdf_cmd"
doc-to-pdf-server = "jaraco.office.convert:ConvertServer.start_server"

[tool.setuptools_scm]
