[build-system]
requires = [
	"setuptools>=77",
	"setuptools_scm[toml]>=3.4.1",
	# jaraco/skeleton#174
	"coherent.licensed",
]
build-backend = "setuptools.build_meta"

[project]
name = "jaraco.office"
authors = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "Utility library for working with MS Office documents"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.9"
license = "MIT"
dependencies = [
	"jaraco.path",
]
dynamic = ["version"]
keywords = ["excel office word"]

[project.urls]
Source = "https://github.com/jaraco/jaraco.office"

[project.optional-dependencies]
test = [
	# upstream
	"pytest >= 6, != 8.1.*",

	# local
	'pypiwin32; platform_system == "Windows"',
]

doc = [
	# upstream
	"sphinx >= 3.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# local
]

check = [
	"pytest-checkdocs >= 2.4",
	"pytest-ruff >= 0.2.1; sys_platform != 'cygwin'",
]

cover = [
	"pytest-cov",
]

enabler = [
	"pytest-enabler >= 2.2",
]

type = [
	# upstream
	"pytest-mypy",

	# local
]


[project.scripts]
doc-to-pdf = "jaraco.office.word:doc_to_pdf_cmd"
doc-to-pdf-server = "jaraco.office.convert:ConvertServer.start_server"


[tool.setuptools_scm]


[tool.pytest-enabler.mypy]
# Disabled due to jaraco/skeleton#143
