[metadata]
name = jaraco.office
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Utility library for working with MS Office documents
long_description = file:README.rst
url = https://github.com/jaraco/jaraco.office
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Operating System :: Microsoft :: Windows
keywords = excel office word

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.8
install_requires =
	jaraco.path

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-cov
	pytest-mypy; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 2.2
	pytest-ruff >= 0.2.1

	# local
	pypiwin32; platform_system == "Windows"
docs =
	# upstream
	sphinx >= 3.5
	# workaround for sphinx/sphinx-doc#11662
	sphinx < 7.2.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# local

[options.entry_points]
console_scripts =
	doc-to-pdf = jaraco.office.word:doc_to_pdf_cmd
	doc-to-pdf-server = jaraco.office.convert:ConvertServer.start_server
